--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,12 +13,12 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "dev.yasan.metro"
         minSdk 21
-        targetSdk 32
+        targetSdk 33
 
         versionCode 233
         versionName "2.3.3"
@@ -66,33 +66,39 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion "1.2.0"
+        kotlinCompilerExtensionVersion compose_compiler_version
     }
     packagingOptions {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+    namespace 'dev.yasan.metro.tehran'
 }
 advancedVersioning.renameOutputApk()
 
 dependencies {
     // YASAN Development Kit
-    implementation 'com.github.yasan-org:ydk-android:1.1.1'
+    implementation 'com.github.yasanglass:ydk-android:3.0.1'
+
+    // Para
+    implementation 'com.github.yasanglass:para:0.2.0'
 
     // Misc
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.5.0'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.appcompat:appcompat:1.6.0'
+    implementation 'com.google.android.material:material:1.7.0'
 
     // Compose
     implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
-    implementation "androidx.compose.material:material-icons-extended:$compose_version"
-    implementation 'androidx.activity:activity-compose:1.5.1'
+    implementation 'androidx.activity:activity-compose:1.6.1'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     implementation "androidx.navigation:navigation-compose:$lifecycle_version"
+
+    // Compose Material
+    implementation "androidx.compose.material:material:$compose_material_version"
+    implementation "androidx.compose.material:material-icons-extended:$compose_material_version"
 
     // Accompanist
     implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanist_version"
@@ -117,7 +123,7 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
 
     // Leak Canary
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.9.1'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.10'
 
     // Subsampling Scale ImageView
     implementation 'com.davemorrissey.labs:subsampling-scale-image-view-androidx:3.10.0'
@@ -133,23 +139,22 @@ dependencies {
     detektPlugins "io.gitlab.arturbosch.detekt:detekt-formatting:$detekt_version"
 
     // Local Unit Tests
-    implementation "androidx.test:core:1.4.0"
+    implementation 'androidx.test:core:1.5.0'
     testImplementation "junit:junit:$junit_version"
     testImplementation "org.hamcrest:hamcrest-all:1.3"
     testImplementation "androidx.arch.core:core-testing:2.1.0"
-    testImplementation 'org.robolectric:robolectric:4.8.1'
+    testImplementation 'org.robolectric:robolectric:4.9.2'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
     testImplementation "com.google.truth:truth:$truth_version"
     testImplementation "org.mockito:mockito-core:$mockito_version"
 
     // Instrumented Unit Tests
     androidTestImplementation "junit:junit:$junit_version"
-    androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:$mockito_version"
     androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
     androidTestImplementation "com.google.truth:truth:$truth_version"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation "org.mockito:mockito-core:$mockito_version"
     androidTestImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
     kaptAndroidTest "com.google.dagger:hilt-android-compiler:$hilt_version"
