--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        detekt_version = '1.21.0'
-        room_version = '2.4.3'
-        coil_version = '2.2.0'
-        hilt_version = '2.43.2'
+        detekt_version = '1.22.0'
+        room_version = '2.5.0'
+        coil_version = '2.2.2'
+        hilt_version = '2.44.2'
         truth_version = '1.1.3'
-        kotlin_version = '1.7.0'
-        compose_version = '1.2.1'
-        accompanist_version = '0.25.1'
-        lifecycle_version = '2.5.1'
-        mockito_version = '2.28.1'
+        kotlin_version = '1.7.20'
+        compose_version = '1.3.3'
+        compose_compiler_version = '1.3.2'
+        compose_material_version = '1.3.1'
+        accompanist_version = '0.28.0'
+        lifecycle_version = '2.5.3'
+        mockito_version = '2.28.2'
         junit_version = '4.13.2'
     }
     repositories {
@@ -20,7 +22,7 @@ buildscript {
         maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.3.1'
+        classpath 'com.android.tools.build:gradle:7.4.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
         classpath 'me.moallemi.gradle:advanced-build-version:2.0.0'
